<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.NameScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/dummy_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/gamebg"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="159dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/eingabe_spielername"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/weiterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/playerName"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/playerName"
        android:layout_marginBottom="93dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/weiter" />

    <Button
        android:id="@+id/zurückButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerName"
        android:layout_alignStart="@+id/playerName"
        android:layout_alignTop="@+id/weiterButton"
        android:text="@string/zurück" />

</RelativeLayout>
